modified:   views/gps_settings_views.xml

--- a/views/gps_settings_views.xml
+++ b/views/gps_settings_views.xml
@@ -37,7 +37,7 @@
     <!-- Menú para acceder a la configuración -->
     <menuitem id="menu_evisiongps_settings"
               name="Configuración GPS"
-              parent="fleet.fleet_menu_root"
+              parent="fleet.menu_root"
               action="action_evisiongps_settings"
               sequence="20"/>
 </odoo>
