--- a/views/fleet_vehicle_map.xml
+++ b/views/fleet_vehicle_map.xml
@@ -6,7 +6,7 @@
             <script>
                 var map = L.map('map').setView([0, 0], 13);
                 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                    attribution: '&copy; OpenStreetMap contributors'
+                    attribution="© OpenStreetMap contributors"
                 }).addTo(map);
 
                 function updateLocation(lat, lon) {
