--- a/views/gps_settings_views.xml
+++ b/views/gps_settings_views.xml
@@ -26,11 +26,10 @@
         <field name="name">gps.settings.tree</field>
         <field name="model">evisiongps.settings</field>
         <field name="arch" type="xml">
-            <tree string="Configuraciones Guardadas">
+            <tree>
                 <field name="email"/>
                 <field name="connection_status"/>
                 <field name="user_api_hash"/>
-                <field name="active"/>
             </tree>
         </field>
     </record>
@@ -42,7 +41,6 @@
         <field name="view_mode">tree,form</field>
         <field name="view_id" ref="view_gps_settings_form"/>
         <field name="target">current</field>
-        <field name="domain">[('active', '=', True)]</field>
     </record>
 
     <!-- Menú para acceder a la configuración -->
