--- a/views/fleet_vehicle_map.xml
+++ b/views/fleet_vehicle_map.xml
@@ -1,35 +1,22 @@
 <odoo>
-    <record id="view_gps_map" model="ir.ui.view">
-        <field name="name">gps.map.view</field>
-        <field name="model">fleet.vehicle</field>
-        <field name="arch" type="xml">
-            <form string="Ubicación en Tiempo Real">
-                <sheet>
-                    <div class="oe_form_field oe_full">
-                        <div id="gps_map" style="height: 500px;"></div>
-                    </div>
-                </sheet>
-            </form>
-        </field>
-    </record>
-
-    <template id="gps_map_template" name="Mapa de Ubicación GPS">
+    <template id="gps_map_template">
         <t t-call="web.external_layout">
+            <div id="map" style="height: 500px; width: 100%;"></div>
             <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
             <script>
-                document.addEventListener("DOMContentLoaded", function() {
-                    var lat = parseFloat(odoo.session_info.context.default_latitude);
-                    var lon = parseFloat(odoo.session_info.context.default_longitude);
+                var map = L.map('map').setView([0, 0], 13);
+                L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                    attribution: '© OpenStreetMap contributors'
+                }).addTo(map);
 
-                    var map = L.map('gps_map').setView([lat, lon], 15);
-                    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                        attribution: '&copy; OpenStreetMap contributors'
-                    }).addTo(map);
+                function updateLocation(lat, lon) {
+                    map.setView([lat, lon], 13);
+                    L.marker([lat, lon]).addTo(map).bindPopup("Ubicación Actual").openPopup();
+                }
 
-                    L.marker([lat, lon]).addTo(map)
-                        .bindPopup("Ubicación Actual del Vehículo")
-                        .openPopup();
-                });
+                setInterval(function() {
+                    // Aquí se debe llamar a la API y actualizar la ubicación.
+                }, 20000);
             </script>
         </t>
     </template>
