--- a/views/fleet_vehicle_views.xml
+++ b/views/fleet_vehicle_views.xml
@@ -7,18 +7,12 @@
             <xpath expr="//sheet/group" position="inside">
                 <group string="GPS">
                     <field name="has_gps"/>
-                    <field name="gps_imei" modifiers="{'readonly': [['has_gps', '=', False]]}"/>
-                    <field name="gps_sim_number" modifiers="{'readonly': [['has_gps', '=', False]]}"/>
-                    <field name="gps_online_status" readonly="1"/>
-                    <field name="gps_last_location" readonly="1"/>
-                    <field name="gps_last_update" readonly="1"/>
-
+                    <field name="gps_imei" attrs="{'readonly': [('has_gps', '=', False)]}"/>
+                    <field name="gps_sim_number" attrs="{'readonly': [('has_gps', '=', False)]}"/>
                     <button string="Ubicación Actual" type="object" name="action_get_location" class="btn-primary"/>
-                    <button string="Sincronizar" type="object" name="action_sync_gps" class="btn-info"/>               
+                    <button string="Sincronizar GPS" type="object" name="action_sync_gps" class="btn-info"/>
                 </group>
             </xpath>
         </field>
     </record>
 </odoo>
-
-
