--- a/views/fleet_vehicle_map.xml
+++ b/views/fleet_vehicle_map.xml
@@ -3,30 +3,16 @@
         <field name="name">fleet.vehicle.map</field>
         <field name="model">fleet.vehicle</field>
         <field name="arch" type="xml">
-            <form string="Ubicación del Vehículo">
+            <form string="Ubicación GPS">
                 <sheet>
-                    <group>
-                        <field name="gps_last_location" readonly="1"/>
-                    </group>
-                    <div style="height: 400px; width: 100%;" class="oe_map_container">
-                        <script type="text/javascript" src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-                        <script>
-                            document.addEventListener("DOMContentLoaded", function() {
-                                var lat = parseFloat("{{ context.get('default_lat', 0) }}");
-                                var lon = parseFloat("{{ context.get('default_lon', 0) }}");
-
-                                var map = L.map('map').setView([lat, lon], 13);
-                                L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                                    attribution: 'OpenStreetMap contributors'
-                                }).addTo(map);
-
-                                L.marker([lat, lon]).addTo(map)
-                                    .bindPopup("Ubicación del Vehículo")
-                                    .openPopup();
-                            });
-                        </script>
-                        <div id="map" style="height: 100%; width: 100%;"></div>
-                    </div>
+                    <div id="map" style="height: 500px; width: 100%;"></div>
+                    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+                    <script>
+                        var map = L.map('map').setView([14.5995, -90.5671], 13);
+                        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                            attribution: 'OpenStreetMap contributors'
+                        }).addTo(map);
+                    </script>
                 </sheet>
             </form>
         </field>
