--- a/views/fleet_vehicle_views.xml
+++ b/views/fleet_vehicle_views.xml
@@ -11,6 +11,8 @@
                     <field name="gps_sim_number" modifiers="{'readonly': [['has_gps', '=', False]]}"/>
                     <field name="gps_online_status" readonly="1"/>
                     <field name="gps_last_location" readonly="1"/>
+                    <field name="gps_speed" readonly="1"/>
+                    <field name="gps_device_id" readonly="1"/>
                     <field name="gps_last_update" readonly="1"/>
 
                     <button string="Ubicación Actual" type="object" name="action_get_location" class="btn-primary"/>
